Working on the addEventListener

--- a/DataBinding.html
+++ b/DataBinding.html
@@ -9,6 +9,7 @@
         <input type="text" id="input" v-model="message">
         <p>The value of the input is: {{ message }}.</p>
 </div>
+<!-- CDN -->
 <script src="https://unpkg.com/vue@2"></script>
 
         <script>
@@ -23,3 +24,5 @@
         </script>
     </body>
 </html>
+
+<!-- The data is the single source of truth -->
