--- a/attributeBinding.html
+++ b/attributeBinding.html
@@ -5,13 +5,15 @@
     </head>
     <body>
         <div id="root">
-            <button v-bind:title="title">Hover Over Me</button>
+            <!-- <button v-bind:title="title">Hover Over Me</button> -->
+            <button :title="title">Hover Over Me</button>
         </div>
 
         <script src="https://unpkg.com/vue@2.6.14"></script>
 
         <script>
             var app = new Vue({
+                // Must mount the root to the Vue
                 el: '#root',
                 data: {
                     title: 'Now the title is being set through Javascript.'
